--- a/L'ingenu.html
+++ b/L'ingenu.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>L'ingenu</title>
+<title>W3.CSS Template</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -21,8 +21,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
-  <img src="voltaire.jpg" style="width:100%">
-  <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-black">
+  <img src="img/voltaire.jpg" style="width:100%">
+  <a href="index.html" class="w3-bar-item w3-button w3-padding-large  w3-hover-black">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
   </a>
@@ -30,7 +30,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <i class="fa fa-user w3-xxlarge"></i>
     <p>ABOUT</p>
   </a>
-  <a href="Homekarya.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="Homekarya.html" class="w3-bar-item w3-button w3-padding-large w3-black">
     <i class="fa fa-eye w3-xxlarge"></i>
     <p>KARYA</p>
   </a>
@@ -83,27 +83,32 @@ Di seluruh L'Ingénu, Voltaire menganjurkan deisme, dan mencela intoleransi, fan
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-         <img src="6.jpg" style="width:100%">
-        <img src="3.jpg" style="width:100%">
+         <img src="img/6.jpg" style="width:100%">
+        <img src="img/3.jpg" style="width:100%">
       </div>
 
       <div class="w3-half">
-        <img src="4.jpg" style="width:70%">
-        <img src="5.jpg" style="width:90%">
+        <img src="img/4.jpg" style="width:70%">
+        <img src="img/5.jpg" style="width:90%">
       </div>
     <!-- End photo grid -->
     </div>
   <!-- End Portfolio Section -->
   </div>
-<!--footer-->
-	  <div class="footer"><footer class="w3-container w3-dark-grey w3-center"  style="padding:32px">
-	    <a href="L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
-	    <a href="henri.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">La Henriade</a>
-	    <a href="Micromégas1752.html" class="w3-button w3-black w3-padding-large w3-margin-bottom"> Micromégas1752</a>
-	    <a href="volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
-	    <a href="zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
-	    <p>@Created by Aida, Az Zahra, Azriel, Jeneva, Puji, Syahriliandika</p>
-	    </footer>
+  <!--footer-->
+    <div class="footer">
+
+    <footer class="w3-container w3-dark-grey" style="padding:32px">
+  <a href="L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
+  
+  <a href="henri.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">La Henriade</a>
+  <a href="Micromégas1752.html" class="w3-button w3-black w3-padding-large w3-margin-bottom"> Micromégas1752</a>
+ 
+
+  <a href="volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
+    <a href="zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
+</footer>
+</div>
   
 
 <!-- END PAGE CONTENT -->
