--- a/Micromégas1752.html
+++ b/Micromégas1752.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Micromégas 1752</title>
+<title>W3.CSS Template</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -21,8 +21,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
-  <img src="voltaire.jpg" style="width:100%">
-  <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-black">
+  <img src="img/voltaire.jpg" style="width:100%">
+  <a href="index.html" class="w3-bar-item w3-button w3-padding-large  w3-hover-black">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
   </a>
@@ -30,7 +30,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <i class="fa fa-user w3-xxlarge"></i>
     <p>ABOUT</p>
   </a>
-  <a href="Homekarya.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="Homekarya.html" class="w3-bar-item w3-button w3-padding-large w3-black w3-hover-black">
     <i class="fa fa-eye w3-xxlarge"></i>
     <p>KARYA</p>
   </a>
@@ -68,11 +68,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   
     <h2 class="w3-text-light-grey">Micromégas 1752</h2>
     <hr style="width:200px" class="w3-opacity">
-    <img src="2.jpg" style="width:30%"><p><strong>Di sebuah planet yang beredar mengelilingi bintang Sirius, hiduplah seorang anak muda amat cerdas. Aku mendapat kehormatan berkenalan dengannya pada saat dia mengunjungi sarang semut kami baru-baru ini. Dia dipanggil Micromégas, nama yang pantas untuk bangsa besar. Tingginya 8 league, atau 24.000 langkah geometris dengan panjang masing-masing lima kaki, atau 120.000 kaki.</strong></p>
+    <img src="img/2.jpg" style="width:30%"><p><strong>Di sebuah planet yang beredar mengelilingi bintang Sirius, hiduplah seorang anak muda amat cerdas. Aku mendapat kehormatan berkenalan dengannya pada saat dia mengunjungi sarang semut kami baru-baru ini. Dia dipanggil Micromégas, nama yang pantas untuk bangsa besar. Tingginya 8 league, atau 24.000 langkah geometris dengan panjang masing-masing lima kaki, atau 120.000 kaki.</strong></p>
 
     <p><strong> Kita orang bumi punya tinggi rata-rata hampir tidak lebih dari lima kaki—satu langkah. Jadi buminya Tn. Micromégas pastilah memiliki keliling 24.000 kali lebih besar daripada Bumi kecil kita. Di alam tidak ada yang lebih sederhana, lebih wajar. Domini raja-raja tertentu di Jerman atau Italia, yang dapat Anda kitari dalam setengah jam, dibandingkan dengan kekaisaran Turki, Rusia, atau China, hanya memberi gambaran samar akan lebarnya kesenjangan yang Alam tetapkan di antara beraneka jenis makhluk sejagat raya.</strong></p>
 
-    <p> <strong>Berdasarkan tinggi Yang Mulia Micromégas, pemahat atau pelukis manapun akan sependapat bahwa pinggangnya pasti sepadan, berkeliling sekitar 50.000 kaki. Dengan hidung sepertiga panjang wajah eloknya, dan wajah sepertujuh tinggi tubuh eloknya, maka hidung Sirius berpanjang kira-kira 5.714 kaki.</strong></p><img src="1.jpg" style="width:60%">
+    <p> <strong>Berdasarkan tinggi Yang Mulia Micromégas, pemahat atau pelukis manapun akan sependapat bahwa pinggangnya pasti sepadan, berkeliling sekitar 50.000 kaki. Dengan hidung sepertiga panjang wajah eloknya, dan wajah sepertujuh tinggi tubuh eloknya, maka hidung Sirius berpanjang kira-kira 5.714 kaki.</strong></p><img src="img/1.jpg" style="width:60%">
 
     <p> <strong>Akalnya menandingi orang paling terdidik di antara kita; dia tahu banyak hal, sebagiannya adalah hasil temuan sendiri. Dia belum menginjak usia ke-250, dan sedang belajar di sekolah paling ternama di planetnya, sebagaimana lazim pada usianya, ketika memecahkan 50 dalil Euclid—18 lebih banyak daripada Blaise Pascal, yang, menurut keterangan saudarinya, usai memecahkan 32 dalil demi kesenangan pribadi, menjadi ahli geometri cukup bagus dan metafisikawan amat buruk. Saat berumur sekitar 450 tahun, dan sudah melewati masa kanak-kanak, Micromégas membedah banyak serangga kecil berdiameter kurang dari 100 kaki, dengan bantuan mikroskop canggih; dia menulis sebuah buku menarik tentang mereka, yang membawanya ke dalam masalah.</strong></p>
 
@@ -89,27 +89,32 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-         <img src="6.jpg" style="width:100%">
-        <img src="3.jpg" style="width:100%">
+         <img src="img/6.jpg" style="width:100%">
+        <img src="img/3.jpg" style="width:100%">
       </div>
 
       <div class="w3-half">
-        <img src="4.jpg" style="width:70%">
-        <img src="5.jpg" style="width:90%">
+        <img src="img/4.jpg" style="width:70%">
+        <img src="img/5.jpg" style="width:90%">
       </div>
     <!-- End photo grid -->
     </div>
   <!-- End Portfolio Section -->
   </div>
   <!--footer-->
-      <div class="footer"><footer class="w3-container w3-dark-grey w3-center"  style="padding:32px">
-        <a href="L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
-        <a href="henri.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">La Henriade</a>
-        <a href="Micromégas1752.html" class="w3-button w3-black w3-padding-large w3-margin-bottom"> Micromégas1752</a>
-        <a href="volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
-        <a href="zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
-        <p>@Created by Aida, Az Zahra, Azriel, Jeneva, Puji, Syahriliandika</p>
-        </footer>
+    <div class="footer">
+
+    <footer class="w3-container w3-dark-grey" style="padding:32px">
+  <a href="L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
+  
+  <a href="henri.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">La Henriade</a>
+  <a href="Micromégas1752.html" class="w3-button w3-black w3-padding-large w3-margin-bottom"> Micromégas1752</a>
+  
+
+  <a href="volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
+    <a href="zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
+</footer>
+</div>
 
   
 
