--- a/henri.html
+++ b/henri.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Henriade</title>
+<title>W3.CSS Template</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -21,8 +21,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
-  <img src="voltaire.jpg" style="width:100%">
-  <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-black">
+  <img src="img/voltaire.jpg" style="width:100%">
+  <a href="index.html" class="w3-bar-item w3-button w3-padding-large  w3-hover-black">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
   </a>
@@ -30,7 +30,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <i class="fa fa-user w3-xxlarge"></i>
     <p>ABOUT</p>
   </a>
-  <a href="Homekarya.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="Homekarya.html" class="w3-bar-item w3-button w3-padding-large w3-black ">
     <i class="fa fa-eye w3-xxlarge"></i>
     <p>KARYA</p>
   </a>
@@ -57,13 +57,14 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- Page Content -->
 <div class="w3-padding-large" id="main">
   <!-- Header/Home -->
-  <header class="w3-container w3-padding-32 w3-center w3-white" id="home">
-    <h1 class="w3-jumbo">Voltaire's Book</h1>
-    <p style="background-color:white;font-size:150%;font-color:grey;"> Frenc Enlightenment Writer </p>
+  <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
+    <h1 class="w3-jumbo"><span class="w3-hide-small">La</span> Henriade</h1>
+    <p>1723</p>
+    <img src="img/karya2.jpg" alt="boy" class="w3-image" width="992" height="1108">
   </header>
 
   <!-- About Section -->
-  <div class="w3-content w3-justify w3-text-white w3-padding-64" id="about">
+  <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">La Henriade</h2>
 
     <hr style="width:200px" class="w3-opacity">
@@ -73,6 +74,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
    
  <!-- Testimonials -->
     <h3 class="w3-padding-24 w3-text-light-grey">Stucture</h3>  
+   
     <p>Puisi, dalam sepuluh nyanyian atau canto, terdiri dari dua bagian utama; yang pertama semata-mata dari sudut pandang historis, dan materinya hanya faktual. Bagian kedua lebih longgar dalam integritas faktualnya, dan menarik lebih kuat dari imajinasi Voltaire. "Fiksi" ini, seperti Voltaire menyebutnya, sebagian besar berhubungan dengan Henry IV, dan "menarik dari daerah yang luar biasa", dan termasuk "prediksi pertobatan Henry, perlindungan yang diberikan kepadanya oleh Saint Louis, miliknya penampakan, api dari Surga menghancurkan pertunjukan magis yang kemudian sangat umum, dll. " Voltaire juga menyatakan bahwa berbagai bagian lain dari puisi itu murni bersifat alegoris:" misalnya, perjalanan Perselisihan ke Roma, Politik dan Fanatisme dipersonifikasikan, bait Cinta, Gairah dan Suara, dll. "
 
 Puisi itu ditulis dalam gaya reformasi dari bait alexandrine dua belas suku kata. Dia membuat heksameter bergaya ini untuk efek dramatis. Beberapa komentator mengatakan bahwa ritme sajak ini tidak sesuai dengan isi dan tema puisi tersebut. Menurut editor puisi O. R. Taylor, puisi itu "jarang menyentuh sensibilitas pembaca modern"  dan pembaca yang berharap api luhur akan kecewa, meskipun syair Voltaire selalu idiomatis dan tidak pernah pedestrian. Esai Bahasa Inggris Voltaire tentang Perang Sipil di Prancis. Diekstrak dari Curious Manuscripts (1727) mengungkapkan pendapatnya yang Tercerahkan tentang tema-tema ini dalam bentuk prosa yang lebih mudah didekati oleh selera modern.
@@ -90,22 +92,26 @@ ATAU Taylor edisi kritis dari La Henriade  mencurahkan volume penuh untuk pengan
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-        <img src="henri.JPG" style="width:60%">
+        <img src="img/henri.jpg" style="width:100%">
         
     <!-- End photo grid -->
     </div>
   <!-- End Portfolio Section -->
   </div>
   <!--footer-->
-		  <div class="footer"><footer class="w3-container w3-dark-grey w3-center"  style="padding:32px">
-		    <a href="L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
-		    <a href="henri.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">La Henriade</a>
-		    <a href="Micromégas1752.html" class="w3-button w3-black w3-padding-large w3-margin-bottom"> Micromégas1752</a>
-		    <a href="volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
-		    <a href="zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
-		    <p>@Created by Aida, Az Zahra, Azriel, Jeneva, Puji, Syahriliandika</p>
-		    </footer>
-    </div>
+    <div class="footer">
+
+    <footer class="w3-container w3-dark-grey" style="padding:32px">
+  <a href="L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
+  
+  <a href="henri.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">La Henriade</a>
+  <a href="Micromégas1752.html" class="w3-button w3-black w3-padding-large w3-margin-bottom"> Micromégas1752</a>
+
+
+  <a href="volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
+    <a href="zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
+</footer>
+</div>
 <!-- END PAGE CONTENT -->
 </div>
 
