--- a/zadig.html
+++ b/zadig.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Zadig 1747</title>
+<title>W3.CSS Template</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -21,8 +21,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
-  <img src="voltaire.jpg" style="width:100%">
-  <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-black">
+  <img src="img/voltaire.jpg" style="width:100%">
+  <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black ">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
   </a>
@@ -30,7 +30,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <i class="fa fa-user w3-xxlarge"></i>
     <p>ABOUT</p>
   </a>
-  <a href="Homekarya.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="Homekarya.html" class="w3-bar-item w3-button w3-padding-large w3-black ">
     <i class="fa fa-eye w3-xxlarge"></i>
     <p>KARYA</p>
   </a>
@@ -58,15 +58,15 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- Page Content -->
 <div class="w3-padding-large" id="main">
   <!-- Header/Home -->
-  <header class="w3-container w3-padding-32 w3-center w3-white" id="home">
-    <h1 class="w3-jumbo">Voltaire's Book</h1>
-    <p style="background-color:white;font-size:150%;font-color:grey;"> Frenc Enlightenment Writer </p>
-    <img src="karya1.jpg">
+  <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
+    <h1 class="w3-jumbo"><span class="w3-hide-small">Zadig</span> (Voltaire).</h1>
+    <p>1747.</p>
+    <img src="img/karya1.jpg">
   </header>
 
   <!-- About Section -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
-    <h2 class="w3-text-light-grey">Zadig 1747</h2>
+    <h2 class="w3-text-light-grey">Zadig</h2>
     <hr style="width:200px" class="w3-opacity">
     <p>Zadig ou la Destinée (Zadig, atau The Book of Fate; 1747) adalah sebuah novel dan karya fiksi filosofis oleh penulis Pencerahan Voltaire. Ini bercerita tentang Zadig, seorang filsuf di Babylonia kuno. Penulis tidak mencoba keakuratan historis, dan beberapa masalah yang dihadapi Zadig adalah rujukan terselubung untuk masalah sosial dan politik di zaman Voltaire sendiri.
 
@@ -156,15 +156,19 @@ Teks itu juga memengaruhi kisah percintaan Islandia-saga, Fimmbræðra saga, yan
   <!-- End Contact Section -->
   </div>
   
- <!--footer-->
-      <div class="footer"><footer class="w3-container w3-dark-grey w3-center"  style="padding:32px">
-        <a href="L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
-        <a href="henri.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">La Henriade</a>
-        <a href="Micromégas1752.html" class="w3-button w3-black w3-padding-large w3-margin-bottom"> Micromégas1752</a>
-        <a href="volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
-        <a href="zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
-        <p>@Created by Aida, Az Zahra, Azriel, Jeneva, Puji, Syahriliandika</p>
-        </footer>
+   <!--footer-->
+    <div class="footer">
+
+    <footer class="w3-container w3-dark-grey" style="padding:32px">
+  <a href="L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
+  
+  <a href="henri.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">La Henriade</a>
+  <a href="Micromégas1752.html" class="w3-button w3-black w3-padding-large w3-margin-bottom"> Micromégas1752</a>
+
+  <a href="volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
+    <a href="zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
+</footer>
+</div>
 <!-- END PAGE CONTENT -->
 </div>
 
