--- a/subkarya/Micromégas1752.html
+++ b/subkarya/Micromégas1752.html
@@ -21,7 +21,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
-  <img src="img/voltaire.jpg" style="width:100%">
+  <img src="../img/voltaire.jpg" style="width:100%">
   <a href="index.html" class="w3-bar-item w3-button w3-padding-large  w3-hover-black">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
@@ -68,7 +68,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   
     <h2 class="w3-text-light-grey">Micromégas 1752</h2>
     <hr style="width:200px" class="w3-opacity">
-    <img src="img/2.jpg" style="width:30%"><p><strong>Di sebuah planet yang beredar mengelilingi bintang Sirius, hiduplah seorang anak muda amat cerdas. Aku mendapat kehormatan berkenalan dengannya pada saat dia mengunjungi sarang semut kami baru-baru ini. Dia dipanggil Micromégas, nama yang pantas untuk bangsa besar. Tingginya 8 league, atau 24.000 langkah geometris dengan panjang masing-masing lima kaki, atau 120.000 kaki.</strong></p>
+    <img src="../img/2.jpg" style="width:30%"><p><strong>Di sebuah planet yang beredar mengelilingi bintang Sirius, hiduplah seorang anak muda amat cerdas. Aku mendapat kehormatan berkenalan dengannya pada saat dia mengunjungi sarang semut kami baru-baru ini. Dia dipanggil Micromégas, nama yang pantas untuk bangsa besar. Tingginya 8 league, atau 24.000 langkah geometris dengan panjang masing-masing lima kaki, atau 120.000 kaki.</strong></p>
 
     <p><strong> Kita orang bumi punya tinggi rata-rata hampir tidak lebih dari lima kaki—satu langkah. Jadi buminya Tn. Micromégas pastilah memiliki keliling 24.000 kali lebih besar daripada Bumi kecil kita. Di alam tidak ada yang lebih sederhana, lebih wajar. Domini raja-raja tertentu di Jerman atau Italia, yang dapat Anda kitari dalam setengah jam, dibandingkan dengan kekaisaran Turki, Rusia, atau China, hanya memberi gambaran samar akan lebarnya kesenjangan yang Alam tetapkan di antara beraneka jenis makhluk sejagat raya.</strong></p>
 
@@ -89,13 +89,13 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-         <img src="img/6.jpg" style="width:100%">
-        <img src="img/3.jpg" style="width:100%">
+         <img src="../img/6.jpg" style="width:100%">
+        <img src="../img/3.jpg" style="width:100%">
       </div>
 
       <div class="w3-half">
-        <img src="img/4.jpg" style="width:70%">
-        <img src="img/5.jpg" style="width:90%">
+        <img src="../img/4.jpg" style="width:70%">
+        <img src="../img/5.jpg" style="width:90%">
       </div>
     <!-- End photo grid -->
     </div>
