--- a/Homekarya.html
+++ b/Homekarya.html
@@ -90,7 +90,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p style="background-color:White;font-size:150%;font-color:Black;"><strong>Dictionnaire Philosophique 1764  </strong></p>
     <p style="font-size:100%;font-color:white;">Dictionnaire philosophique adalah sebuah kamus ensiklopedik yang diterbitkan oleh Voltaire pada 1764. Artikel-artikelnya yang diurutkan berdasarkan abjad seringkali mengkritik Gereja Katolik Roma, Yudaisme, Islam dan lembaga lainnya.</p><br>
     
-    <a href = "subkarya/Micromégas1752.html"><img src="Micromégas.png" alt="Avatar" class="w3-left w3-square w3-margin-right" style="width:200px"></a>
+    <a href = "subkarya/Micromégas1752.html"><img src="img/Micromégas.png" alt="Avatar" class="w3-left w3-square w3-margin-right" style="width:200px"></a>
     <p style="background-color:White;font-size:150%;font-color:Black;"><strong> <a href = "Micromégas1752.html">Micromégas 1752 </a></strong></p>
     <p style="font-size:100%;font-color:white;">Diterjemahkan dari bahasa Inggris-Micromégas adalah novel yang ditulis pada tahun 1752 oleh filsuf dan satirist Prancis, Voltaire. Bersamaan dengan kisahnya "Mimpi Plato", ini adalah contoh awal dalam genre sastra fiksi ilmiah, dan merupakan perkembangan yang signifikan dalam sejarah sastra.<a href = "Micromégas1752.html"><strong>Read more..</strong></a></p><br>
 
