--- a/Homekarya.html
+++ b/Homekarya.html
@@ -79,8 +79,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p style="font-size:100%;font-color:white;">Candide adalah sebuah novel satir yang ditulis oleh filsuf Voltaire. Novel ini diterbitkan pertama kali pada 1759 di Jenewa, Swiss.</p><br>
     
     <a href = "subkarya/zadig.html"><img src="img/Zadig1747.png" alt="Avatar" class="w3-left w3-square w3-margin-right" style="width:150px"> </a>
-    <p style="background-color:White;font-size:150%;font-color:Black;"><strong> <a href = "zadig.html"> Zadig 1747 </a></strong></p>
-    <p style="font-size:100%;font-color:white;">Diterjemahkan dari bahasa Inggris-Zadig ou la Destinée adalah novel dan karya fiksi filosofis oleh penulis Enlightenment Voltaire. Ini bercerita tentang Zadig, seorang filsuf di Babylonia kuno. <a href = "zadig.html"><strong>Read more..</strong></a></p><br>
+    <p style="background-color:White;font-size:150%;font-color:Black;"><strong> <a href = "subkarya/zadig.html"> Zadig 1747 </a></strong></p>
+    <p style="font-size:100%;font-color:white;">Diterjemahkan dari bahasa Inggris-Zadig ou la Destinée adalah novel dan karya fiksi filosofis oleh penulis Enlightenment Voltaire. Ini bercerita tentang Zadig, seorang filsuf di Babylonia kuno. <a href = "subkarya/zadig.html"><strong>Read more..</strong></a></p><br>
   
     <img src="img/1763.png" alt="Avatar" class="w3-left w3-square w3-margin-right" style="width:150px">
     <p style="background-color:White;font-size:150%;font-color:Black;"><strong> Treatise on Tolerance 1763 </strong></p>
@@ -91,8 +91,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p style="font-size:100%;font-color:white;">Dictionnaire philosophique adalah sebuah kamus ensiklopedik yang diterbitkan oleh Voltaire pada 1764. Artikel-artikelnya yang diurutkan berdasarkan abjad seringkali mengkritik Gereja Katolik Roma, Yudaisme, Islam dan lembaga lainnya.</p><br>
     
     <a href = "subkarya/Micromégas1752.html"><img src="img/Micromégas.png" alt="Avatar" class="w3-left w3-square w3-margin-right" style="width:150px"></a>
-    <p style="background-color:White;font-size:150%;font-color:Black;"><strong> <a href = "Micromégas1752.html">Micromégas 1752 </a></strong></p>
-    <p style="font-size:100%;font-color:white;">Diterjemahkan dari bahasa Inggris-Micromégas adalah novel yang ditulis pada tahun 1752 oleh filsuf dan satirist Prancis, Voltaire. Bersamaan dengan kisahnya "Mimpi Plato", ini adalah contoh awal dalam genre sastra fiksi ilmiah, dan merupakan perkembangan yang signifikan dalam sejarah sastra.<a href = "Micromégas1752.html"><strong>Read more..</strong></a></p><br>
+    <p style="background-color:White;font-size:150%;font-color:Black;"><strong> <a href = "subkarya/Micromégas1752.html">Micromégas 1752 </a></strong></p>
+    <p style="font-size:100%;font-color:white;">Diterjemahkan dari bahasa Inggris-Micromégas adalah novel yang ditulis pada tahun 1752 oleh filsuf dan satirist Prancis, Voltaire. Bersamaan dengan kisahnya "Mimpi Plato", ini adalah contoh awal dalam genre sastra fiksi ilmiah, dan merupakan perkembangan yang signifikan dalam sejarah sastra.<a href = "subkarya/Micromégas1752.html"><strong>Read more..</strong></a></p><br>
 
     <img src="img/Complete Works of Voltaire.png" alt="Avatar" class="w3-left w3-square w3-margin-right" style="width:150px">
     <p style="background-color:White;font-size:150%;font-color:Black;"><strong> Complete Works of Voltaire 1968 </strong></p>
